<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TerceraActivity">

    <Button
        android:id="@+id/primer_boton"
        android:layout_width="132dp"
        android:layout_height="98dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listChoiceIndicatorSingle"
        android:backgroundTint="#1E1E1D"
        android:text="@string/ir_a_primera_actividad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/segundo_boton"
        android:layout_width="379dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#CAE44D"
        android:text="@string/ir_a_segunda_actividad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primer_boton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="362dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:text="@string/javier_eduardo_ocampo_andrade"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/segundo_boton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="374dp"
        android:layout_height="98dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="47dp"
        android:text="@string/javier_ocampo2828_alumnos_udg_mx"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>